ProjetoCompilador/Compilador/Objects/sintatico.output
Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 $@2: ε

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos T_FIMPROG

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 variaveis: ε
    6          | declaracao_variaveis

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    8                     | tipo lista_variaveis

    9 tipo: T_INTEIRO
   10     | T_LOGICO

   11 lista_variaveis: lista_variaveis T_IDENTIF
   12                | T_IDENTIF

   13 lista_comandos: lista_comandos comando
   14               | comando

   15 comando: leitura
   16        | escrita
   17        | repeticao
   18        | selecao
   19        | atribuicao
   20        | repeticao_dowhile

   21 leitura: T_LEIA T_IDENTIF

   22 escrita: T_ESCREVA expressao

   23 repeticao: T_ENQUANTO expressao T_FACA lista_comandos T_FIMEQNTO

   24 repeticao_dowhile: T_FACA lista_comandos T_ENQUANTO expressao T_FIMEQNTO

   25 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

   26 atribuicao: T_IDENTIF T_ATRIB expressao

   27 expressao: expressao T_MAIS expressao
   28          | expressao T_MENOS expressao
   29          | expressao T_VEZES expressao
   30          | expressao T_DIV expressao
   31          | expressao T_MAIOR expressao
   32          | expressao T_MENOR expressao
   33          | expressao T_E expressao
   34          | expressao T_OU expressao
   35          | expressao T_IGUAL expressao
   36          | termo

   37 termo: T_NUMERO
   38      | T_IDENTIF
   39      | T_V
   40      | T_F
   41      | T_NAO termo
   42      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 4
    T_INICIO (259) 3
    T_FIMPROG (260) 3
    T_LEIA (261) 21
    T_ESCREVA (262) 22
    T_SE (263) 25
    T_ENTAO (264) 25
    T_SENAO (265) 25
    T_FIMSE (266) 25
    T_ENQUANTO (267) 23 24
    T_FACA (268) 23 24
    T_FIMEQNTO (269) 23 24
    T_MAIS (270) 27
    T_MENOS (271) 28
    T_VEZES (272) 29
    T_DIV (273) 30
    T_MAIOR (274) 31
    T_MENOR (275) 32
    T_IGUAL (276) 35
    T_E (277) 33
    T_OU (278) 34
    T_NAO (279) 41
    T_ATRIB (280) 26
    T_ABRE (281) 42
    T_FECHA (282) 42
    T_INTEIRO (283) 9
    T_LOGICO (284) 10
    T_V (285) 39
    T_F (286) 40
    T_IDENTIF (287) 4 11 12 21 26 38
    T_NUMERO (288) 37


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    programa (35)
        on left: 3
        on right: 0
    $@1 (36)
        on left: 1
        on right: 3
    $@2 (37)
        on left: 2
        on right: 3
    cabecalho (38)
        on left: 4
        on right: 3
    variaveis (39)
        on left: 5 6
        on right: 3
    declaracao_variaveis (40)
        on left: 7 8
        on right: 6 7
    tipo (41)
        on left: 9 10
        on right: 7 8
    lista_variaveis (42)
        on left: 11 12
        on right: 7 8 11
    lista_comandos (43)
        on left: 13 14
        on right: 3 13 23 24 25
    comando (44)
        on left: 15 16 17 18 19 20
        on right: 13 14
    leitura (45)
        on left: 21
        on right: 15
    escrita (46)
        on left: 22
        on right: 16
    repeticao (47)
        on left: 23
        on right: 17
    repeticao_dowhile (48)
        on left: 24
        on right: 20
    selecao (49)
        on left: 25
        on right: 18
    atribuicao (50)
        on left: 26
        on right: 19
    expressao (51)
        on left: 27 28 29 30 31 32 33 34 35 36
        on right: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 42
    termo (52)
        on left: 37 38 39 40 41 42
        on right: 36 41


State 0

    0 $accept: • programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    4 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 5


State 3

    3 programa: cabecalho • $@1 variaveis $@2 T_INICIO lista_comandos T_FIMPROG

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


State 4

    4 cabecalho: T_PROGRAMA T_IDENTIF •

    $default  reduce using rule 4 (cabecalho)


State 5

    0 $accept: programa $end •

    $default  accept


State 6

    3 programa: cabecalho $@1 • variaveis $@2 T_INICIO lista_comandos T_FIMPROG

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    $default  reduce using rule 5 (variaveis)

    variaveis             go to state 9
    declaracao_variaveis  go to state 10
    tipo                  go to state 11


State 7

    9 tipo: T_INTEIRO •

    $default  reduce using rule 9 (tipo)


State 8

   10 tipo: T_LOGICO •

    $default  reduce using rule 10 (tipo)


State 9

    3 programa: cabecalho $@1 variaveis • $@2 T_INICIO lista_comandos T_FIMPROG

    $default  reduce using rule 2 ($@2)

    $@2  go to state 12


State 10

    6 variaveis: declaracao_variaveis •

    $default  reduce using rule 6 (variaveis)


State 11

    7 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
    8                     | tipo • lista_variaveis

    T_IDENTIF  shift, and go to state 13

    lista_variaveis  go to state 14


State 12

    3 programa: cabecalho $@1 variaveis $@2 • T_INICIO lista_comandos T_FIMPROG

    T_INICIO  shift, and go to state 15


State 13

   12 lista_variaveis: T_IDENTIF •

    $default  reduce using rule 12 (lista_variaveis)


State 14

    7 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
    8                     | tipo lista_variaveis •
   11 lista_variaveis: lista_variaveis • T_IDENTIF

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8
    T_IDENTIF  shift, and go to state 16

    $default  reduce using rule 8 (declaracao_variaveis)

    declaracao_variaveis  go to state 17
    tipo                  go to state 11


State 15

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO • lista_comandos T_FIMPROG

    T_LEIA      shift, and go to state 18
    T_ESCREVA   shift, and go to state 19
    T_SE        shift, and go to state 20
    T_ENQUANTO  shift, and go to state 21
    T_FACA      shift, and go to state 22
    T_IDENTIF   shift, and go to state 23

    lista_comandos     go to state 24
    comando            go to state 25
    leitura            go to state 26
    escrita            go to state 27
    repeticao          go to state 28
    repeticao_dowhile  go to state 29
    selecao            go to state 30
    atribuicao         go to state 31


State 16

   11 lista_variaveis: lista_variaveis T_IDENTIF •

    $default  reduce using rule 11 (lista_variaveis)


State 17

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $default  reduce using rule 7 (declaracao_variaveis)


State 18

   21 leitura: T_LEIA • T_IDENTIF

    T_IDENTIF  shift, and go to state 32


State 19

   22 escrita: T_ESCREVA • expressao

    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_IDENTIF  shift, and go to state 37
    T_NUMERO   shift, and go to state 38

    expressao  go to state 39
    termo      go to state 40


State 20

   25 selecao: T_SE • expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_IDENTIF  shift, and go to state 37
    T_NUMERO   shift, and go to state 38

    expressao  go to state 41
    termo      go to state 40


State 21

   23 repeticao: T_ENQUANTO • expressao T_FACA lista_comandos T_FIMEQNTO

    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_IDENTIF  shift, and go to state 37
    T_NUMERO   shift, and go to state 38

    expressao  go to state 42
    termo      go to state 40


State 22

   24 repeticao_dowhile: T_FACA • lista_comandos T_ENQUANTO expressao T_FIMEQNTO

    T_LEIA      shift, and go to state 18
    T_ESCREVA   shift, and go to state 19
    T_SE        shift, and go to state 20
    T_ENQUANTO  shift, and go to state 21
    T_FACA      shift, and go to state 22
    T_IDENTIF   shift, and go to state 23

    lista_comandos     go to state 43
    comando            go to state 25
    leitura            go to state 26
    escrita            go to state 27
    repeticao          go to state 28
    repeticao_dowhile  go to state 29
    selecao            go to state 30
    atribuicao         go to state 31


State 23

   26 atribuicao: T_IDENTIF • T_ATRIB expressao

    T_ATRIB  shift, and go to state 44


State 24

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos • T_FIMPROG
   13 lista_comandos: lista_comandos • comando

    T_FIMPROG   shift, and go to state 45
    T_LEIA      shift, and go to state 18
    T_ESCREVA   shift, and go to state 19
    T_SE        shift, and go to state 20
    T_ENQUANTO  shift, and go to state 21
    T_FACA      shift, and go to state 22
    T_IDENTIF   shift, and go to state 23

    comando            go to state 46
    leitura            go to state 26
    escrita            go to state 27
    repeticao          go to state 28
    repeticao_dowhile  go to state 29
    selecao            go to state 30
    atribuicao         go to state 31


State 25

   14 lista_comandos: comando •

    $default  reduce using rule 14 (lista_comandos)


State 26

   15 comando: leitura •

    $default  reduce using rule 15 (comando)


State 27

   16 comando: escrita •

    $default  reduce using rule 16 (comando)


State 28

   17 comando: repeticao •

    $default  reduce using rule 17 (comando)


State 29

   20 comando: repeticao_dowhile •

    $default  reduce using rule 20 (comando)


State 30

   18 comando: selecao •

    $default  reduce using rule 18 (comando)


State 31

   19 comando: atribuicao •

    $default  reduce using rule 19 (comando)


State 32

   21 leitura: T_LEIA T_IDENTIF •

    $default  reduce using rule 21 (leitura)


State 33

   41 termo: T_NAO • termo

    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_IDENTIF  shift, and go to state 37
    T_NUMERO   shift, and go to state 38

    termo  go to state 47


State 34

   42 termo: T_ABRE • expressao T_FECHA

    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_IDENTIF  shift, and go to state 37
    T_NUMERO   shift, and go to state 38

    expressao  go to state 48
    termo      go to state 40


State 35

   39 termo: T_V •

    $default  reduce using rule 39 (termo)


State 36

   40 termo: T_F •

    $default  reduce using rule 40 (termo)


State 37

   38 termo: T_IDENTIF •

    $default  reduce using rule 38 (termo)


State 38

   37 termo: T_NUMERO •

    $default  reduce using rule 37 (termo)


State 39

   22 escrita: T_ESCREVA expressao •
   27 expressao: expressao • T_MAIS expressao
   28          | expressao • T_MENOS expressao
   29          | expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MAIOR expressao
   32          | expressao • T_MENOR expressao
   33          | expressao • T_E expressao
   34          | expressao • T_OU expressao
   35          | expressao • T_IGUAL expressao

    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_VEZES  shift, and go to state 51
    T_DIV    shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57

    $default  reduce using rule 22 (escrita)


State 40

   36 expressao: termo •

    $default  reduce using rule 36 (expressao)


State 41

   25 selecao: T_SE expressao • T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE
   27 expressao: expressao • T_MAIS expressao
   28          | expressao • T_MENOS expressao
   29          | expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MAIOR expressao
   32          | expressao • T_MENOR expressao
   33          | expressao • T_E expressao
   34          | expressao • T_OU expressao
   35          | expressao • T_IGUAL expressao

    T_ENTAO  shift, and go to state 58
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_VEZES  shift, and go to state 51
    T_DIV    shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57


State 42

   23 repeticao: T_ENQUANTO expressao • T_FACA lista_comandos T_FIMEQNTO
   27 expressao: expressao • T_MAIS expressao
   28          | expressao • T_MENOS expressao
   29          | expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MAIOR expressao
   32          | expressao • T_MENOR expressao
   33          | expressao • T_E expressao
   34          | expressao • T_OU expressao
   35          | expressao • T_IGUAL expressao

    T_FACA   shift, and go to state 59
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_VEZES  shift, and go to state 51
    T_DIV    shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57


State 43

   13 lista_comandos: lista_comandos • comando
   24 repeticao_dowhile: T_FACA lista_comandos • T_ENQUANTO expressao T_FIMEQNTO

    T_LEIA      shift, and go to state 18
    T_ESCREVA   shift, and go to state 19
    T_SE        shift, and go to state 20
    T_ENQUANTO  shift, and go to state 60
    T_FACA      shift, and go to state 22
    T_IDENTIF   shift, and go to state 23

    comando            go to state 46
    leitura            go to state 26
    escrita            go to state 27
    repeticao          go to state 28
    repeticao_dowhile  go to state 29
    selecao            go to state 30
    atribuicao         go to state 31


State 44

   26 atribuicao: T_IDENTIF T_ATRIB • expressao

    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_IDENTIF  shift, and go to state 37
    T_NUMERO   shift, and go to state 38

    expressao  go to state 61
    termo      go to state 40


State 45

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos T_FIMPROG •

    $default  reduce using rule 3 (programa)


State 46

   13 lista_comandos: lista_comandos comando •

    $default  reduce using rule 13 (lista_comandos)


State 47

   41 termo: T_NAO termo •

    $default  reduce using rule 41 (termo)


State 48

   27 expressao: expressao • T_MAIS expressao
   28          | expressao • T_MENOS expressao
   29          | expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MAIOR expressao
   32          | expressao • T_MENOR expressao
   33          | expressao • T_E expressao
   34          | expressao • T_OU expressao
   35          | expressao • T_IGUAL expressao
   42 termo: T_ABRE expressao • T_FECHA

    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_VEZES  shift, and go to state 51
    T_DIV    shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57
    T_FECHA  shift, and go to state 62


State 49

   27 expressao: expressao T_MAIS • expressao

    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_IDENTIF  shift, and go to state 37
    T_NUMERO   shift, and go to state 38

    expressao  go to state 63
    termo      go to state 40


State 50

   28 expressao: expressao T_MENOS • expressao

    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_IDENTIF  shift, and go to state 37
    T_NUMERO   shift, and go to state 38

    expressao  go to state 64
    termo      go to state 40


State 51

   29 expressao: expressao T_VEZES • expressao

    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_IDENTIF  shift, and go to state 37
    T_NUMERO   shift, and go to state 38

    expressao  go to state 65
    termo      go to state 40


State 52

   30 expressao: expressao T_DIV • expressao

    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_IDENTIF  shift, and go to state 37
    T_NUMERO   shift, and go to state 38

    expressao  go to state 66
    termo      go to state 40


State 53

   31 expressao: expressao T_MAIOR • expressao

    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_IDENTIF  shift, and go to state 37
    T_NUMERO   shift, and go to state 38

    expressao  go to state 67
    termo      go to state 40


State 54

   32 expressao: expressao T_MENOR • expressao

    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_IDENTIF  shift, and go to state 37
    T_NUMERO   shift, and go to state 38

    expressao  go to state 68
    termo      go to state 40


State 55

   35 expressao: expressao T_IGUAL • expressao

    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_IDENTIF  shift, and go to state 37
    T_NUMERO   shift, and go to state 38

    expressao  go to state 69
    termo      go to state 40


State 56

   33 expressao: expressao T_E • expressao

    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_IDENTIF  shift, and go to state 37
    T_NUMERO   shift, and go to state 38

    expressao  go to state 70
    termo      go to state 40


State 57

   34 expressao: expressao T_OU • expressao

    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_IDENTIF  shift, and go to state 37
    T_NUMERO   shift, and go to state 38

    expressao  go to state 71
    termo      go to state 40


State 58

   25 selecao: T_SE expressao T_ENTAO • lista_comandos T_SENAO lista_comandos T_FIMSE

    T_LEIA      shift, and go to state 18
    T_ESCREVA   shift, and go to state 19
    T_SE        shift, and go to state 20
    T_ENQUANTO  shift, and go to state 21
    T_FACA      shift, and go to state 22
    T_IDENTIF   shift, and go to state 23

    lista_comandos     go to state 72
    comando            go to state 25
    leitura            go to state 26
    escrita            go to state 27
    repeticao          go to state 28
    repeticao_dowhile  go to state 29
    selecao            go to state 30
    atribuicao         go to state 31


State 59

   23 repeticao: T_ENQUANTO expressao T_FACA • lista_comandos T_FIMEQNTO

    T_LEIA      shift, and go to state 18
    T_ESCREVA   shift, and go to state 19
    T_SE        shift, and go to state 20
    T_ENQUANTO  shift, and go to state 21
    T_FACA      shift, and go to state 22
    T_IDENTIF   shift, and go to state 23

    lista_comandos     go to state 73
    comando            go to state 25
    leitura            go to state 26
    escrita            go to state 27
    repeticao          go to state 28
    repeticao_dowhile  go to state 29
    selecao            go to state 30
    atribuicao         go to state 31


State 60

   23 repeticao: T_ENQUANTO • expressao T_FACA lista_comandos T_FIMEQNTO
   24 repeticao_dowhile: T_FACA lista_comandos T_ENQUANTO • expressao T_FIMEQNTO

    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_IDENTIF  shift, and go to state 37
    T_NUMERO   shift, and go to state 38

    expressao  go to state 74
    termo      go to state 40


State 61

   26 atribuicao: T_IDENTIF T_ATRIB expressao •
   27 expressao: expressao • T_MAIS expressao
   28          | expressao • T_MENOS expressao
   29          | expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MAIOR expressao
   32          | expressao • T_MENOR expressao
   33          | expressao • T_E expressao
   34          | expressao • T_OU expressao
   35          | expressao • T_IGUAL expressao

    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_VEZES  shift, and go to state 51
    T_DIV    shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57

    $default  reduce using rule 26 (atribuicao)


State 62

   42 termo: T_ABRE expressao T_FECHA •

    $default  reduce using rule 42 (termo)


State 63

   27 expressao: expressao • T_MAIS expressao
   27          | expressao T_MAIS expressao •
   28          | expressao • T_MENOS expressao
   29          | expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MAIOR expressao
   32          | expressao • T_MENOR expressao
   33          | expressao • T_E expressao
   34          | expressao • T_OU expressao
   35          | expressao • T_IGUAL expressao

    T_VEZES  shift, and go to state 51
    T_DIV    shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57

    $default  reduce using rule 27 (expressao)


State 64

   27 expressao: expressao • T_MAIS expressao
   28          | expressao • T_MENOS expressao
   28          | expressao T_MENOS expressao •
   29          | expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MAIOR expressao
   32          | expressao • T_MENOR expressao
   33          | expressao • T_E expressao
   34          | expressao • T_OU expressao
   35          | expressao • T_IGUAL expressao

    T_VEZES  shift, and go to state 51
    T_DIV    shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57

    $default  reduce using rule 28 (expressao)


State 65

   27 expressao: expressao • T_MAIS expressao
   28          | expressao • T_MENOS expressao
   29          | expressao • T_VEZES expressao
   29          | expressao T_VEZES expressao •
   30          | expressao • T_DIV expressao
   31          | expressao • T_MAIOR expressao
   32          | expressao • T_MENOR expressao
   33          | expressao • T_E expressao
   34          | expressao • T_OU expressao
   35          | expressao • T_IGUAL expressao

    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57

    $default  reduce using rule 29 (expressao)


State 66

   27 expressao: expressao • T_MAIS expressao
   28          | expressao • T_MENOS expressao
   29          | expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   30          | expressao T_DIV expressao •
   31          | expressao • T_MAIOR expressao
   32          | expressao • T_MENOR expressao
   33          | expressao • T_E expressao
   34          | expressao • T_OU expressao
   35          | expressao • T_IGUAL expressao

    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57

    $default  reduce using rule 30 (expressao)


State 67

   27 expressao: expressao • T_MAIS expressao
   28          | expressao • T_MENOS expressao
   29          | expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MAIOR expressao
   31          | expressao T_MAIOR expressao •
   32          | expressao • T_MENOR expressao
   33          | expressao • T_E expressao
   34          | expressao • T_OU expressao
   35          | expressao • T_IGUAL expressao

    T_E   shift, and go to state 56
    T_OU  shift, and go to state 57

    $default  reduce using rule 31 (expressao)


State 68

   27 expressao: expressao • T_MAIS expressao
   28          | expressao • T_MENOS expressao
   29          | expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MAIOR expressao
   32          | expressao • T_MENOR expressao
   32          | expressao T_MENOR expressao •
   33          | expressao • T_E expressao
   34          | expressao • T_OU expressao
   35          | expressao • T_IGUAL expressao

    T_E   shift, and go to state 56
    T_OU  shift, and go to state 57

    $default  reduce using rule 32 (expressao)


State 69

   27 expressao: expressao • T_MAIS expressao
   28          | expressao • T_MENOS expressao
   29          | expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MAIOR expressao
   32          | expressao • T_MENOR expressao
   33          | expressao • T_E expressao
   34          | expressao • T_OU expressao
   35          | expressao • T_IGUAL expressao
   35          | expressao T_IGUAL expressao •

    T_E   shift, and go to state 56
    T_OU  shift, and go to state 57

    $default  reduce using rule 35 (expressao)


State 70

   27 expressao: expressao • T_MAIS expressao
   28          | expressao • T_MENOS expressao
   29          | expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MAIOR expressao
   32          | expressao • T_MENOR expressao
   33          | expressao • T_E expressao
   33          | expressao T_E expressao •
   34          | expressao • T_OU expressao
   35          | expressao • T_IGUAL expressao

    $default  reduce using rule 33 (expressao)


State 71

   27 expressao: expressao • T_MAIS expressao
   28          | expressao • T_MENOS expressao
   29          | expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MAIOR expressao
   32          | expressao • T_MENOR expressao
   33          | expressao • T_E expressao
   34          | expressao • T_OU expressao
   34          | expressao T_OU expressao •
   35          | expressao • T_IGUAL expressao

    $default  reduce using rule 34 (expressao)


State 72

   13 lista_comandos: lista_comandos • comando
   25 selecao: T_SE expressao T_ENTAO lista_comandos • T_SENAO lista_comandos T_FIMSE

    T_LEIA      shift, and go to state 18
    T_ESCREVA   shift, and go to state 19
    T_SE        shift, and go to state 20
    T_SENAO     shift, and go to state 75
    T_ENQUANTO  shift, and go to state 21
    T_FACA      shift, and go to state 22
    T_IDENTIF   shift, and go to state 23

    comando            go to state 46
    leitura            go to state 26
    escrita            go to state 27
    repeticao          go to state 28
    repeticao_dowhile  go to state 29
    selecao            go to state 30
    atribuicao         go to state 31


State 73

   13 lista_comandos: lista_comandos • comando
   23 repeticao: T_ENQUANTO expressao T_FACA lista_comandos • T_FIMEQNTO

    T_LEIA      shift, and go to state 18
    T_ESCREVA   shift, and go to state 19
    T_SE        shift, and go to state 20
    T_ENQUANTO  shift, and go to state 21
    T_FACA      shift, and go to state 22
    T_FIMEQNTO  shift, and go to state 76
    T_IDENTIF   shift, and go to state 23

    comando            go to state 46
    leitura            go to state 26
    escrita            go to state 27
    repeticao          go to state 28
    repeticao_dowhile  go to state 29
    selecao            go to state 30
    atribuicao         go to state 31


State 74

   23 repeticao: T_ENQUANTO expressao • T_FACA lista_comandos T_FIMEQNTO
   24 repeticao_dowhile: T_FACA lista_comandos T_ENQUANTO expressao • T_FIMEQNTO
   27 expressao: expressao • T_MAIS expressao
   28          | expressao • T_MENOS expressao
   29          | expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MAIOR expressao
   32          | expressao • T_MENOR expressao
   33          | expressao • T_E expressao
   34          | expressao • T_OU expressao
   35          | expressao • T_IGUAL expressao

    T_FACA      shift, and go to state 59
    T_FIMEQNTO  shift, and go to state 77
    T_MAIS      shift, and go to state 49
    T_MENOS     shift, and go to state 50
    T_VEZES     shift, and go to state 51
    T_DIV       shift, and go to state 52
    T_MAIOR     shift, and go to state 53
    T_MENOR     shift, and go to state 54
    T_IGUAL     shift, and go to state 55
    T_E         shift, and go to state 56
    T_OU        shift, and go to state 57


State 75

   25 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO • lista_comandos T_FIMSE

    T_LEIA      shift, and go to state 18
    T_ESCREVA   shift, and go to state 19
    T_SE        shift, and go to state 20
    T_ENQUANTO  shift, and go to state 21
    T_FACA      shift, and go to state 22
    T_IDENTIF   shift, and go to state 23

    lista_comandos     go to state 78
    comando            go to state 25
    leitura            go to state 26
    escrita            go to state 27
    repeticao          go to state 28
    repeticao_dowhile  go to state 29
    selecao            go to state 30
    atribuicao         go to state 31


State 76

   23 repeticao: T_ENQUANTO expressao T_FACA lista_comandos T_FIMEQNTO •

    $default  reduce using rule 23 (repeticao)


State 77

   24 repeticao_dowhile: T_FACA lista_comandos T_ENQUANTO expressao T_FIMEQNTO •

    $default  reduce using rule 24 (repeticao_dowhile)


State 78

   13 lista_comandos: lista_comandos • comando
   25 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO lista_comandos • T_FIMSE

    T_LEIA      shift, and go to state 18
    T_ESCREVA   shift, and go to state 19
    T_SE        shift, and go to state 20
    T_FIMSE     shift, and go to state 79
    T_ENQUANTO  shift, and go to state 21
    T_FACA      shift, and go to state 22
    T_IDENTIF   shift, and go to state 23

    comando            go to state 46
    leitura            go to state 26
    escrita            go to state 27
    repeticao          go to state 28
    repeticao_dowhile  go to state 29
    selecao            go to state 30
    atribuicao         go to state 31


State 79

   25 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE •

    $default  reduce using rule 25 (selecao)
